src/web-app/kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: 'galyakir/galdemogoapp:1'
          ports:
            - containerPort: 3000
              protocol: TCP
