src/web-app/kubernetes/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app
spec:
  type: NodePort
  ports:
    - name: "goapp-service"
      port: 3000
      targetPort: 3000
  selector:
    app: go-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    app.kubernetes.io/name: "nginx-ingress-controller"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: go-app
              servicePort: 3000
